--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,11 @@
 
 a {
   color: #0b4182;
+  text-decoration: none;
+}
+
+a:not(.no-underline):hover {
+  text-decoration: underline;
 }
 
 ::selection {
@@ -12,19 +17,4 @@ a {
 ::-moz-selection {
   background: #0b4182;
   color: white;
-}
-
-
-/* Make sure new rows in the grid wrap properly */
-
-@media screen and (min-width: 60em) {
-  article:nth-child(3n+1) {
-    clear: left;
-  }
-}
-
-@media screen and (min-width: 30em) and (max-width: 60em) {
-  article:nth-child(odd) {
-    clear: left;
-  }
 }
